Updated readme with relevant info